Revert "Merge pull request #45 from agkorman/rocco-taishi"
This reverts commit 9d18293b4a02255f56ef3a25bda1915e97aff1e7, reversing
changes made to 4218c2a6d36c010bd0b995bc03a6cb04264c4a0e.