@@ -4,7 +4,6 @@ import ar.edu.itba.paw.model.Car;
 import ar.edu.itba.paw.model.CarImagePayload;
 import ar.edu.itba.paw.model.CarRequest;
 import ar.edu.itba.paw.model.CarRequestImage;
-import ar.edu.itba.paw.model.Page;
 import ar.edu.itba.paw.persistence.CarDao;
 import ar.edu.itba.paw.persistence.CarImageDao;
 import ar.edu.itba.paw.persistence.CarRequestDao;
@@ -13,6 +12,7 @@ import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.math.BigDecimal;
+import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
 
@@ -37,44 +37,71 @@ public class CarRequestServiceImpl implements CarRequestService {
     }
 
     @Override
+    public List<CarRequest> getAllCarRequests() {
+        return carRequestDao.findAll();
+    }
+
+    @Override
     public List<CarRequest> getCarRequestsByStatus(final String status) {
-        final String normalizedStatus = StringUtils.normalize(status);
+        final String normalizedStatus = normalize(status);
         if (normalizedStatus == null) {
-            return List.of();
+            return Collections.emptyList();
         }
         return carRequestDao.findByStatus(normalizedStatus);
     }
 
     @Override
-    public Page<CarRequest> getCarRequestsByStatus(final String status, final int page) {
-        final String normalizedStatus = StringUtils.normalize(status);
-        if (normalizedStatus == null) {
-            return Page.empty(page < 1 ? 1 : page, 0);
+    @Transactional
+    public CarRequest createPendingRequest(final long submittedByUserId, final String submitterEmail,
+                                           final long brandId, final long bodyTypeId, final String model,
+                                           final String description, final Optional<String> imageContentType,
+                                           final Optional<byte[]> imageData, final String fuelType,
+                                           final Integer horsepower, final Integer airbagCount,
+                                           final String transmission, final BigDecimal fuelConsumption,
+                                           final Integer maxSpeedKmh) {
+        final boolean hasImageContentType = imageContentType.isPresent();
+        final boolean hasImageData = imageData.isPresent();
+        if (hasImageContentType != hasImageData) {
+            throw new IllegalArgumentException("Image metadata and payload must be provided together.");
         }
-        return carRequestDao.findByStatus(normalizedStatus, page);
-    }
-
-    @Override
-    public long countCarRequestsByStatus(final String status) {
-        final String normalizedStatus = StringUtils.normalize(status);
-        if (normalizedStatus == null) {
-            return 0L;
-        }
-        return carRequestDao.countByStatus(normalizedStatus);
+        final List<CarImagePayload> images = hasImageContentType
+                ? List.of(new CarImagePayload(imageContentType.orElseThrow(), imageData.orElseThrow()))
+                : Collections.emptyList();
+        return createPendingRequest(
+                submittedByUserId,
+                submitterEmail,
+                brandId,
+                bodyTypeId,
+                model,
+                description,
+                images,
+                fuelType,
+                horsepower,
+                airbagCount,
+                transmission,
+                fuelConsumption,
+                maxSpeedKmh
+        );
     }
 
     @Override
     @Transactional
     public CarRequest createPendingRequest(final long submittedByUserId, final String submitterEmail,
-                                           final long brandId, final long bodyTypeId, final Integer year,
-                                           final String model, final String description, final List<CarImagePayload> images,
+                                           final long brandId, final long bodyTypeId, final String model,
+                                           final String description, final List<CarImagePayload> images,
                                            final String fuelType, final Integer horsepower,
                                            final Integer airbagCount, final String transmission,
-                                           final BigDecimal fuelConsumption, final Integer maxSpeedKmh,
-                                           final BigDecimal priceUsd) {
-        final String normalizedModel = StringUtils.normalizeRequired(model, "Model is required for car requests.");
-        final String normalizedDescription = StringUtils.normalizeRequired(description, "Description is required for car requests.");
-        final List<CarImagePayload> normalizedImages = ImagePayloadUtils.normalizeImages(images);
+                                           final BigDecimal fuelConsumption, final Integer maxSpeedKmh) {
+        final String normalizedModel = normalize(model);
+        if (normalizedModel == null) {
+            throw new IllegalArgumentException("Model is required for car requests.");
+        }
+
+        final String normalizedDescription = normalize(description);
+        if (normalizedDescription == null) {
+            throw new IllegalArgumentException("Description is required for car requests.");
+        }
+        final List<CarImagePayload> normalizedImages = normalizeImages(images);
         final CarImagePayload coverImage = normalizedImages.isEmpty() ? null : normalizedImages.get(0);
 
         try {
@@ -83,7 +110,6 @@ public class CarRequestServiceImpl implements CarRequestService {
                     submitterEmail,
                     brandId,
                     bodyTypeId,
-                    year,
                     normalizedModel,
                     normalizedDescription,
                     coverImage == null ? null : coverImage.getContentType(),
@@ -94,8 +120,7 @@ public class CarRequestServiceImpl implements CarRequestService {
                     airbagCount,
                     transmission,
                     fuelConsumption,
-                    maxSpeedKmh,
-                    priceUsd
+                    maxSpeedKmh
             );
             if (!normalizedImages.isEmpty()) {
                 carRequestDao.replaceImages(request.getId(), normalizedImages);
@@ -129,7 +154,6 @@ public class CarRequestServiceImpl implements CarRequestService {
                 request.getBrandId(),
                 request.getModel(),
                 request.getBodyTypeId(),
-                request.getYear(),
                 request.getDescription(),
                 Optional.empty(),
                 Optional.empty(),
@@ -138,28 +162,33 @@ public class CarRequestServiceImpl implements CarRequestService {
                 request.getAirbagCount(),
                 request.getTransmission(),
                 request.getFuelConsumption(),
-                request.getMaxSpeedKmh(),
-                request.getPriceUsd()
+                request.getMaxSpeedKmh()
         );
     }
 
     @Override
     @Transactional
     public boolean approvePendingRequest(final long id, final long brandId, final String model,
-                                         final long bodyTypeId, final Integer year, final String description,
+                                         final long bodyTypeId, final String description,
                                          final Optional<String> imageContentType,
                                          final Optional<byte[]> imageData,
                                          final String fuelType, final Integer horsepower,
                                          final Integer airbagCount, final String transmission,
-                                         final BigDecimal fuelConsumption, final Integer maxSpeedKmh,
-                                         final BigDecimal priceUsd) {
+                                         final BigDecimal fuelConsumption, final Integer maxSpeedKmh) {
         final CarRequest request = carRequestDao.findById(id).orElse(null);
         if (request == null || !STATUS_PENDING.equals(request.getStatus())) {
             return false;
         }
 
-        final String normalizedModel = StringUtils.normalizeRequired(model, "Model is required to approve car requests.");
-        final String normalizedDescription = StringUtils.normalizeRequired(description, "Description is required to approve car requests.");
+        final String normalizedModel = normalize(model);
+        if (normalizedModel == null) {
+            throw new IllegalArgumentException("Model is required to approve car requests.");
+        }
+
+        final String normalizedDescription = normalize(description);
+        if (normalizedDescription == null) {
+            throw new IllegalArgumentException("Description is required to approve car requests.");
+        }
 
         final boolean hasImageContentType = imageContentType.isPresent();
         final boolean hasImageData = imageData.isPresent();
@@ -176,15 +205,13 @@ public class CarRequestServiceImpl implements CarRequestService {
                 brandId,
                 normalizedModel,
                 bodyTypeId,
-                year,
                 normalizedDescription,
                 fuelType,
                 horsepower,
                 airbagCount,
                 transmission,
                 fuelConsumption,
-                maxSpeedKmh,
-                priceUsd
+                maxSpeedKmh
         );
         final String contentTypeToPersist = imageContentType.orElse(request.getImageContentType());
         final byte[] imageDataToPersist = imageData.orElse(request.getImageData());
@@ -211,4 +238,24 @@ public class CarRequestServiceImpl implements CarRequestService {
         return carRequestDao.updateStatus(id, STATUS_PENDING, STATUS_REJECTED);
     }
 
+    private String normalize(final String value) {
+        if (value == null) {
+            return null;
+        }
+        final String trimmed = value.trim();
+        return trimmed.isEmpty() ? null : trimmed;
+    }
+
+    private List<CarImagePayload> normalizeImages(final List<CarImagePayload> images) {
+        if (images == null) {
+            return Collections.emptyList();
+        }
+        for (final CarImagePayload image : images) {
+            if (image == null || image.getContentType() == null || image.getContentType().isBlank()
+                    || image.getImageData() == null || image.getImageData().length == 0) {
+                throw new IllegalArgumentException("Image metadata and payload must be provided together.");
+            }
+        }
+        return List.copyOf(images);
+    }
 }
